--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 logging.level.com.example.GitHubRepository.client.GitHubRepoInfoClient=DEBUG
+base.url.apigithub=https://api.github.com
